Fix logo on iPhone 5

--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -33,3 +33,7 @@
 		transform: rotate(180deg);
 	}
 }
+
+.o-header__drawer-tools-logo {
+	width: 200px;
+}
